# IAC

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  pyproject.toml.save
.github/workflows/: docs.yml  mkdocs-pages.yml  tests.yml
Commands/comandosCLI/: index.html
architecture/: index.html
data/: database.json
docs/: architecture.md  getting-started.md  index.md  readme.md
docs/Commands/: comandosCLI.md
docs/commands/: comandos.md
docs/referencia/: api.md
docs/user-guide/: persistence.md
getting-started/: index.html
readme/: index.html
referencia/api/: index.html
search/: search_index.json
src/iac/: database.json  implementacion.py  models.py
src/iac/models/: __init__.py  company.py  product.py  service.py
src/mi_app/: cli.py  exceptions.py  models.py  services.py  storage.py
tests/: test_iac_service.py
user-guide/commands/: index.html
user-guide/persistence/: index.html
