[project]
name = "iac"
version = "0.1.0"
description = "Sistema de gestión de empresas con CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-material>=9.7.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["src/mi_app"]
